# libsimmetrics

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap.sh  clean.sh  config.status  configure  configure.ac  hostname.exe.stackdump  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
exampleProgram/: Makefile  Makefile.am  Makefile.in  exampleProgram.c
exampleProgram/.deps/: exampleProgram-exampleProgram.Po
include/: Makefile  Makefile.am  Makefile.in  block_distance.h  cosine_similarity.h  cost.h  dice_similarity.h  double_metaphone.h  dyn_array.h  euclidean_distance.h  jaccard_similarity.h  jaro.h  jaro_winkler.h  levenshtein.h  libsimmetrics.h  matching_coefficient.h  metaphone.h  monge_elkan.h  needleman_wunch.h  overlap_coefficient.h  qgrams_distance.h  simmetrics.h  smith_waterman.h  smith_waterman_gotoh.h  soundex.h  tokenizer.h  util.h
libsimmetrics/: Makefile  Makefile.am  Makefile.in  cost.c  jaro.c  jaro_winkler.c  libsimmetrics.c  needleman_wunch.c  smith_waterman.c  smith_waterman_gotoh.c  soundex.c
libsimmetrics/.deps/: libsimmetrics_la-cost.Plo  libsimmetrics_la-dyn_array.Plo  libsimmetrics_la-jaro.Plo  libsimmetrics_la-jaro_winkler.Plo  libsimmetrics_la-levenshtein.Plo  libsimmetrics_la-libsimmetrics.Plo  libsimmetrics_la-needleman_wunch.Plo  libsimmetrics_la-smith_waterman.Plo  libsimmetrics_la-smith_waterman_gotoh.Plo  libsimmetrics_la-soundex.Plo
simmetrics/: Makefile.am  Makefile.in  block_distance.c  cosine_similarity.c  cost.c  dice_similarity.c  double_metaphone.c  dyn_array.c  euclidean_distance.c  jaccard_similarity.c  jaro.c  jaro_winkler.c  levenshtein.c  matching_coefficient.c  metaphone.c  monge_elkan.c  needleman_wunch.c  overlap_coefficient.c  qgrams_distance.c  simmetrics.c  smith_waterman.c  smith_waterman_gotoh.c  soundex.c  tokenizer.c  util.c
src/: Makefile.am
src/include/: Makefile.am  Makefile.in  block_distance.h  cosine_similarity.h  euclidean_distance.h  jaro_winkler.h  matching_coefficient.h  needleman_wunch.h  qgrams_distance.h  simmetrics.h  smith_waterman.h  smith_waterman_gotoh.h  soundex.h  util.h
src/metrics/: cosine_similarity.c  dice_similarity.c  jaccard_similarity.c  jaro.c  jaro_winkler.c  matching_coefficient.c  needleman_wunch.c  overlap_coefficient.c  qgrams_distance.c  smith_waterman.c  smith_waterman_gotoh.c  soundex.c
src/util/: cost.c  tokenizer.c
