# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = uthash.h utarray.h cost.h simmetrics.h soundex.h util.h tokenizer.h jaro.h levenshtein.h jaro_winkler.h smith_waterman.h smith_waterman_gotoh.h needleman_wunch.h monge_elkan.h block_distance.h euclidean_distance.h cosine_similarity.h dice_similarity.h
